# SDL-2-test

./: .appveyor[tag].yml  .gitignore  .travis.yml  CMakeLists.txt  README.md  sdl2tests.cpp
ci/appveyor/: install.bat  set-env.bat
ci/travis/: install-linux.sh  set-env.sh
final-game/shaders/: simple_vertex.glsl
final-game/src/: CMakeLists.txt  bullet.cpp  dungeon.cpp  enemy.cpp  engine.cxx  font.cxx  game.cpp  player.cpp  sound.cxx  special_effect.cpp  texture.cxx
final-game/src/headers/: autotile.hxx  bullet.h  collision_solves.hxx  enemy.h  engine.hxx  player.h  resource_manager.h  special_effect.h
sdl2-chlorine/: vertices.txt
sdl2-chlorine/src/: CMakeLists.txt  enemy.cpp  engine.cxx  game.cpp  pathfinders.cpp  resource_manager.cpp
sdl2-chlorine/src/headers/: collision_solves.hxx  enemy.h  engine.hxx  game_constants.h  game_functions.hxx  pathfinders.h
sdl2-demo/: vertices.txt
sdl2-demo/src/: engine.cxx  game.cpp  sound.cxx
sdl2-demo/src/headers/: engine.hxx  picopng.hxx
sdl2-dungeon/shaders/: simple_vertex.glsl
sdl2-dungeon/src/: CMakeLists.txt  audio.c  dungeon.cpp  engine.cxx  game.cpp  sound.cxx
sdl2-dungeon/src/headers/: engine.hxx
sdl2-engine/src/: CMakeLists.txt  engine.cxx  game.cpp  sdl2tests.cpp
sdl2-engine/src/headers/: engine.hxx
sdl2-game/: vertices.txt
sdl2-game/src/: CMakeLists.txt  dungeon.cpp  engine.cxx  game.cpp  instance.cxx
sdl2-game/src/headers/: engine.hxx  instance.hxx
sdl2-renderer/: sin.txt
sdl2-renderer/src/: dungeon.cpp  engine.cxx  game.cpp  texture.cxx
sdl2-renderer/src/headers/: engine.hxx
sdl2-triangle/: .clang-format  vertices.txt
sdl2-triangle/shaders/: simple_fragment.glsl  simple_vertex.glsl
sdl2-triangle/src/: CMakeLists.txt  engine.cxx  game.cpp  vertices.txt
sdl2-triangle/src/headers/: engine.hxx  instance.hxx
sdl2tests/src/: CMakeLists.txt  sdl2tests.cpp
